# reproevolve

./: .gitignore  README.md  best_program.py  config.yaml  example_evaluator.py  example_initial_program.py  main.py  pyproject.toml
reproevolve/: controller.py  database.py  evaluator.py  logger.py  model.py  prompt_builder.py  prompt_templates.py
